fixed problems of overflow and improve grid of card.html

--- a/styles/card.css
+++ b/styles/card.css
@@ -35,6 +35,11 @@ header {
     padding: 5px 40px;
 }
 
+#header__title {
+    text-decoration: none;
+    color: white
+}
+
 .menu li {
     text-decoration: none;
     display: inline-block;
@@ -55,14 +60,15 @@ header {
 
 main {
     grid-area: main;
+    margin: 0 300px;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 10% repeat(2, 100px);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 15% repeat(3, 100px);
     gap: 20px;
 }
 
-.titolo {
-    grid-column: 1/ 7;
+.page__title {
+    grid-column: 1/5;
     text-align: center;
     color: #55828B;
     font-family: 'Lora', serif;
@@ -71,6 +77,7 @@ main {
 
 
 .card {
+    
     background-color: #55828B;
     display: flex;
     align-items: center;
@@ -91,14 +98,6 @@ main {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis
-}
-
-.card-1{
-    grid-column-start: 2;
-}
-
-.card-5 {
-    grid-column-start: 2;
 }
 
 .card__img {
@@ -143,7 +142,7 @@ footer p {
 @media screen and (min-width: 768px) and (max-width: 991px) {
     main {
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 10% repeat(3, 100px);
+        grid-template-rows: 20% repeat(3, 100px);
         margin: 0 20px;
         gap:0;
         margin: 0 auto;
