--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -27,6 +27,7 @@ body {
     ;
     row-gap: 30px;
     column-gap: 50px;
+    overflow: auto;
 }
 
 header {
@@ -182,14 +183,14 @@ section {
 }
 
 footer {
-    
     background-color: #365359;
     height: 70px;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
-footer p {
+footer div {
     color: white;
     font-size: large;
     font-weight: 200;
@@ -216,7 +217,7 @@ footer p {
 @media screen and (min-width: 768px) and (max-width: 991px) {
     .container {
         height: 100%;
-        grid-template-rows: 20% auto;
+        grid-template-rows: 40% auto;
         margin: 20px 20px;
     }
     .contact__image {
