--- a/styles/index.css
+++ b/styles/index.css
@@ -4,27 +4,27 @@
 
 html {
     font-family: 'Poppins', sans-serif;
-}
-
-body {
-    background-color:#faf0e6;
+    overflow: initial;
+    height: 100%
 }
 
 .container__table {
+    background-color:#faf0e6;
+    min-height: 100%;
     margin: 0 auto;
-    width: 100vw;
-    min-height: 100vh;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 10% 80% auto;
+    grid-template-rows: 80px 80% auto;
     grid-template-areas: 
     "header header header"
     "main main main"
     "footer footer footer";
+    overflow: auto;
 
 }
 
 header {
+    max-height: 60px;
     grid-area: header;
     display: flex;
     justify-content: space-between;
@@ -33,6 +33,11 @@ header {
     color: white;
     align-items: center;
     padding: 5px 40px;
+}
+
+#header__title {
+    text-decoration: none;
+    color: white
 }
 
 .menu li {
@@ -53,7 +58,7 @@ header {
     color: white;
 }
 
-.titolo {
+.page__title {
     text-align: center;
     color: #55828B;
     font-family: 'Lora', serif;
@@ -61,18 +66,19 @@ header {
 }
 
 main {
+    padding-bottom: 20px;
     grid-area: main;
 }
 
 table {
     margin: auto;
     margin-top: 20px;
-    width: 40%;
     text-align: center;
     border: 2px #55828B solid;
     border-radius: 10px;
     font-size: 15px;
     border-collapse: collapse;
+    width: 40%
 
 }
 
@@ -124,7 +130,7 @@ footer {
     grid-area: footer;
     background-color: #365359;
     text-align: center;
-    
+    margin-top: auto;
 }
 
 footer p {
